human_written_tests/WebAssembly/processed_control_flow_validation/test_block_20.wast
(assert_invalid
  (module (func $type-value-f64-vs-void
    (block (f64.const 1.0))
  ))
  "type mismatch"
)